# lab2.1

./: .gitignore  CMakeLists.txt  Makefile  main.c
headers/: _float.h  integer.h  linear_form.h  number.h  vector.h
include/: _float.h  integer.h  linear_form.h  number.h  vector.h
lab/: CMakeLists.txt  Makefile  main.c
lab/include/: _float.h  inout.h  integer.h  linear_form.h  result.h  vector.h
lab/src/: CMakeLists.txt
lab/src/inout/: inout.c
lab/src/linear_form/: linear_form.c  linear_form_internal.h  scalar.c  scalar.h  vector.c  vector_internal.h
lab/src/numbers/: float.c  integer.c
lab/src/result/: result.c  result_internal.h
lab/tests/: CMakeLists.txt  test_runner.c
lab/tests/unit/: test_linear_form.c  test_result.c  test_vector.c
source/: CMakeLists.txt  float.c  integer.c  linear_form.c  vector.c
source/linear_form/: linear_form.c  linear_form_internal.h  scalar.c  scalar.h  vector.c  vector_internal.h
source/numbers/: float.c  float_internal.h  integer.c  integer_internal.h
src/linear_form/: linear_form_internal.h  scalar.h
test_lib/: CMakeLists.txt
test_lib/include/: _assert.h  mock_abort.h  testing.h
test_lib/src/: _assert.c  mock_abort.c  testing.c
